footer and contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,10 @@
 </head>
 <body>
     {{ content }}
+    <footer>
+        <div class="light">
+            &copy; Ambitious 2019.
+        </div>
+    </footer>
 </body>
 </html>
