--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 400px;
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(60deg, #04066c, #a052fb);
