--- a/_sass/brew.scss
+++ b/_sass/brew.scss
@@ -11,15 +11,21 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
+
         .col-4 {
             flex: 1;
-            width: 33.3333%;
+            // width: 33.3333%;
+            padding-left: $gutter/2;
             padding-right: $gutter/2;
+            min-width: 240px;
         }
         .col-8 {
             flex: 2;
-            width: 66.6666%;
+            // width: 66.6666%;
+            padding-right: $gutter/2;
             padding-left: $gutter/2;
+            min-width: 50%;
 
             h2 {
                 margin-top: $gutter/4;
@@ -29,21 +35,26 @@
 
         img {
             width: 100%;
+            margin-bottom: $gutter/2;
         }
     }
 
     .past-speakers-wrapper {
         margin-top: $gutter;
+        padding-left: $gutter/2;
+        padding-right: $gutter/2;
 
         .speakers {
             margin-top: $gutter/4;
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
 
             .item {
                 max-width: 110px;
                 margin-right: $gutter/2;
                 text-align: center;
+                margin-bottom: 8px;
 
                 img {
                     display: block;
