--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -12,6 +12,8 @@
     h1 {
         color: #f2f2f2;
         margin: 0 0 10px 0;
+        padding-left: $gutter;
+        padding-right: $gutter;
     }
     h4 {
         margin: 0;
@@ -20,6 +22,8 @@
         font-size: 20px;
         line-height: 34px;
         font-weight: 400;
+        padding-left: $gutter;
+        padding-right: $gutter;
     }
 
 }
