--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -6,9 +6,13 @@
     h2 {
         margin-bottom: 0;
         text-align: center;
+        padding-left: $gutter/2;
+        padding-right: $gutter/2;
     }
     h3 {
         margin-top: $gutter/4;
         text-align: center;
+        padding-left: $gutter/2;
+        padding-right: $gutter/2;
     }
 }
