--- a/_sass/brew.scss
+++ b/_sass/brew.scss
@@ -61,9 +61,8 @@
                     display: block;
                     width: 150px;
                     height: 150px;
-                    // width: 110px;
-                    // height: 110px;
                     margin-bottom: 5px;
+                    border-radius: 4px;
                 }
                 div {
                     opacity: 0.8;
