add links to join

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -15,4 +15,15 @@
         padding-left: $gutter/2;
         padding-right: $gutter/2;
     }
+
+    a.join-button {
+        display: inline-block;
+        font-size: 19px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        padding-top: 13px;
+        padding-bottom: 13px;
+        padding-left: 25px;
+        paddoing-right: 25px;
+    }
 }
