--- a/_sass/ambitious.scss
+++ b/_sass/ambitious.scss
@@ -64,6 +64,43 @@ a:visited {
 // }
 //
 
+header {
+    position: absolute;
+    top: 10px;
+    right: 0;
+
+    text-align: right;
+    padding-top: 20px;
+    padding-right: 40px;
+    padding-left: 20px;
+
+}
+
+a.join-button {
+    color: #fff !important;
+    border: 2px solid #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 3px;
+
+    &:hover {
+        background-color: #fff;
+        color: rgba(57, 34, 157, 0.8) !important;
+        // text-decoration: underline;
+    }
+
+    &.dark {
+        border-color: rgba(57, 34, 157, 0.8);
+        color: rgba(57, 34, 157, 0.8) !important;
+    }
+    &.dark:hover {
+        background-color: rgba(57, 34, 157, 0.8);
+        color: #fff !important;
+    }
+}
+
 footer {
     padding-top: 30px;
     padding-bottom: 30px;
