--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -5,8 +5,9 @@
     height: 400px;
     // margin-bottom: 40px;
     justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(60deg, #04066c, #a052fb);
+    // align-items: center;
+    // background-image: linear-gradient(60deg, #04066c, #a052fb);
+    background-color: #4E37C7;
     text-align: center;
 
     h1 {
@@ -14,6 +15,7 @@
         margin: 0 0 10px 0;
         padding-left: $gutter;
         padding-right: $gutter;
+        // text-align: left;
     }
     h4 {
         margin: 0;
@@ -24,6 +26,7 @@
         font-weight: 400;
         padding-left: $gutter;
         padding-right: $gutter;
+        // text-align: left;
     }
 
 }
